locust/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locust
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  labels:
    app: locust
  namespace: locust

spec:
  ingressClassName: nginx
  rules:
  - host: locust.nataliagranato.xyz
    http:
      paths:
      - backend:
          service:
            name: locust
            port:
              number: 8089
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - locust.nataliagranato.xyz
    secretName: locust.nataliagranato.xyz
